test/parser/traits/declref_impl_no_identifier.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:10: error: expected identifier
  S::impl;
}
